fix navbar-collapse bug

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -20,7 +20,7 @@ a {
   font-size: 18px;
 }
 .navbar {
-  height: 10px;
+  min-height: 10px;
 }
 article {
   display: flex;
